--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -63,6 +63,10 @@
             android:label="@string/bt_publish"
             android:theme="@style/Theme.MyApplication.NoActionBar" />
         <activity
+            android:name=".OrderListActivity"
+            android:label="@string/bt_order"
+            android:theme="@style/Theme.MyApplication.NoActionBar" />
+        <activity
             android:name="com.btc.application.MainActivity"
             android:label="@string/title_activity_main"
             android:parentActivityName="com.btc.application.ui.login.LoginActivity" />
